bug fixes + half of the pagination implementation
fixes bug with walking animation on userPage (now gradient divs covers then on all resolutions)
Started adding pagination on userPage for user games, added it to user like shelf, still need some work

--- a/zagraj-ze-mna/src/userPage/userPageLobbys.css
+++ b/zagraj-ze-mna/src/userPage/userPageLobbys.css
@@ -144,8 +144,13 @@
 {
     margin-top: 30px;
     width: 100%;
+}
+
+.positionerOfWalkingGang
+{
+    width: 100%;
     height: auto;
-    height: 100px;
+    position: relative;
 }
 
 .moving_div_gang
